# ROS2-projects

./: Project_1_Navigation.md  Project_2_Manipulator  README.md
Project1/: Readme.MD
Project1/manipulator/: package.xml  setup.py
Project1/manipulator/launch/: display.launch.py
Project1/manipulator/manipulator/: IK_solver.py  __init__.py  polynomial_trajectory.py
Project1/manipulator/rviz/: urdf.rviz
Project1/urdf_pkg_template/my_urdf_pkg/: CMakeLists.txt  README.md
Project1/urdf_pkg_template/my_urdf_pkg/rviz/: urdf.rviz
Project1/urdf_pkg_template/my_urdf_pkg/urdf/: manipulator_model.urdf
Project2/: Readme.MD  Readme.md  setup.py
Project2/config/: gz_bridge.yaml
Project2/launch/: control_logic.display.launch.py  gazebo_display.launch.py
Project2/manipulator/: setup.py
Project2/manipulator/launch/: display.launch.py
Project2/manipulator/manipulator/: IK_solver.py  polynomial_trajectory.py
Project2/models/other/: cube.sdf  goal_plane.sdf
Project2/models/ur5_rg2/: model_minimal.urdf
Project2/project2/: GUI_to_Gazebo.py  lidar_to_pose.py  package.xml  setup.cfg  setup.py
Project2/project2/config/: controller.yaml
Project2/project2/launch/: gazebo_display.launch.py
Project2/project2/models/cube/: model.sdf
Project2/project2/models/ur5_rg2/: model.sdf  model_minimal.urdf
Project2/project2/sensors/: lidar_x.sdf  lidar_y.sdf
Project2/sensors/: lidar_x.sdf
Project2/urdf_pkg_template/my_urdf_pkg/: package.xml
Project2/urdf_pkg_template/my_urdf_pkg/launch/: display.launch.py
Project2/worlds/: empty.world
(+2 files in other folders)
